--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,10 @@ transition: background 0.3s ease-in-out;
   transition: transform 0.5s ease-in-out;
 }
 
+.filters {
+  background: #89654a;
+  border-radius: 8px;
+  padding: 4px;
+  transition: background 0.3s ease-in-out;
+}
+
